--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@adobe/hypermedia-pipeline",
   "version": "0.1.0",
   "description": "",
+  "repository": "https://github.com/adobe/hypermedia-pipeline",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
