--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,10 +61,6 @@ jobs:
           keys:
             - v3-dependencies-{{ checksum "package.json" }}
 
-      - run: 
-          name: Install Dependencies
-          command: npm install && npm install -D mocha-junit-reporter npm-snapshot
-
       - save_cache:
           paths:
             - node_modules
@@ -86,7 +82,7 @@ jobs:
 
       - run: 
           name: Publish Snapshot
-          command: exit 1 && npm publish --access public
+          command: npm publish --access public
 
       - store_test_results:
           path: junit
