--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.17.0"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
