Pick up test results in the correct path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,9 +41,9 @@ jobs:
           when: always
 
       - store_test_results:
-          path: test/integration/junit
+          path: junit
       - store_artifacts:
-          path: test/integration/junit 
+          path: junit 
 
   publish-snapshot:
     docker:
