--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
-    "istanbul": "^0.4.5",
+    "istanbul": "^1.0.0-alpha.2",
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.17.0",
     "npm-snapshot": "^1.0.3"
