--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,110 +1,130 @@
 version: 2
 jobs:
-
   build:
     docker:
-      # specify the version you desire here
-      # using the clojurescript image because it has node, java, antlr and the openwhisk tools
-      - image: circleci/node:8
+    - image: circleci/node:8
+      environment:
+        NPM_CONFIG_PREFIX: "~/.npm-global"
+
+    working_directory: ~/repo
+
+    steps:
+    - checkout
+
+    # Download and cache dependencies
+    - restore_cache:
+        keys:
+        - v2-dependencies-{{ checksum "package-lock.json" }}
+    - run:
+        name: Set up global NPM
+        command: mkdir ~/.npm-global
+
+    - run:
+        name: install npm 6.4.0
+        command: sudo npm -g install npm@6.4.0
+
+    - run:
+        name: Install Dependencies
+        command: npm install
+
+    - save_cache:
+        paths:
+        - node_modules
+        key: v2-dependencies-{{ checksum "package-lock.json" }}
+
+    - run:
+        name: Lint
+        command: npm run lint
+
+    # run tests!
+    - run: mkdir junit
+    - run:
+        name: prepare test git user
+        command: git config --global user.email "you@example.com" && git config --global user.name "CircleCi Build"
+    - run:
+        name: Running Tests
+        command: npx mocha --reporter mocha-junit-reporter
         environment:
-            NPM_CONFIG_PREFIX: "~/.npm-global"
-
-    working_directory: ~/repo
-
-    steps:
-      - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v3-dependencies-{{ checksum "package.json" }}
-
-      - run: 
-          name: Install Dependencies
-          command: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v3-dependencies-{{ checksum "package.json" }}
-
-      - run: mkdir -p ~/.npm-global
-
-      - run: npm run lint
-
-      # run tests!
-      - run:
-          name: Running Tests
-          command: npx mocha --reporter mocha-junit-reporter
-          environment:
-            MOCHA_FILE: junit/test-results.xml
-          when: always
-
-      # get code coverage
-      - run:
-          name: Getting Code Coverage
-          command: npx istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec && npx codecov
-          when: always
+          MOCHA_FILE: junit/test-results.xml
+        when: always
 
 
-      - store_test_results:
-          path: junit
-      - store_artifacts:
-          path: junit 
+    # get code coverage
+    - run:
+        name: Getting Code Coverage
+        command: npx istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec && npx codecov
+        environment:
+          MOCHA_FILE: junit/test-results.xml
+        when: always
 
-  publish-snapshot:
+    - store_test_results:
+        path: junit
+
+    - store_artifacts:
+        path: junit
+
+  publish-pre-release:
     docker:
-      # specify the version you desire here
-      # using the clojurescript image because it has node, java, antlr and the openwhisk tools
-      - image: circleci/node:8
+    # specify the version you desire here
+    - image: circleci/node:8
 
     working_directory: ~/repo
 
     steps:
-      - checkout
+    - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v3-dependencies-{{ checksum "package.json" }}
+    - restore_cache:
+        keys:
+        - v2-dependencies-{{ checksum "package-lock.json" }}
 
-      - save_cache:
-          paths:
-            - node_modules
-          key: v3-dependencies-{{ checksum "package.json" }}
+    - add_ssh_keys:
+        fingerprints:
+        - "c3:cc:4e:ec:21:9b:64:b5:61:fb:ba:61:62:cf:62:96"
 
-#      # run tests!
-#      - run: mkdir junit
-#      - run:
-#          name: Running Tests
-#          command: ./node_modules/.bin/mocha test --reporter mocha-junit-reporter
-#          environment:
-#            MOCHA_FILE: junit/test-results.xml
-#          when: always
+    - run:
+        name: prepare test git user
+        command: git config --global user.email "circleci@example.com" && git config --global user.name "CircleCi Build"
 
-      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+    - run:
+        name: install npm 6.4.0
+        command: sudo npm -g install npm@6.4.0
 
-      - run: 
-          command: BUILD_TAG=$(npx npm-snapshot $CIRCLE_BUILD_NUM) echo 'export BUILD_TAG=$BUILD_TAG' >> $BASH_ENV
+    - run:
+        name: install
+        command: npm install
 
-      - run: 
-          name: Publish Snapshot
-          command: npm publish --access public --tag next
+    - run:
+        name: revert changes to package-lock.json
+        command: git checkout -- package-lock.json
 
-      - store_test_results:
-          path: junit
-      - store_artifacts:
-          path: junit 
+    - run:
+        name: configure npm registry
+        command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+
+    - run:
+        name: version pre-release
+        command: npm version prerelease --preid=pre -m "Release %s [ci skip]"
+
+    # unfortunately we cannot create a release commit with no tag with `npm version`, so we need to delete it here again
+    - run:
+        name: delete pre-release tag
+        command: npm run delete-git-tag
+
+    - run:
+        name: publish pre-release
+        command: npm publish --tag next --access public
 
 workflows:
   version: 2
   build:
     jobs:
-      - publish-snapshot:
-           requires:
-               - build
-           filters:
-              branches:
-                only:
-                  - master
-      - build
+    # run build on any branch
+    - build
+
+    # publish pre-releases on master
+    - publish-pre-release:
+        requires:
+        - build
+        filters:
+          branches:
+            only: master
