--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "npm run snyk-protect",
     "preversion": "npm test",
     "postversion": "git push origin master --follow-tags",
-    "delete-git-tag": "git tag -d v$npm_package_version && git push origin :v$npm_package_version",
+    "delete-git-tag": "git tag -d v$npm_package_version && git push origin :v$npm_package_version"
   },
   "author": "",
   "license": "Apache-2.0",
