--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "bluebird": "^3.5.1",
+    "fs-extra": "^7.0.0",
     "hast-util-to-html": "^4.0.1",
     "js-yaml": "^3.12.0",
     "lodash": "^4.17.10",
