--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "remark-rehype": "^3.0.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
+    "retext": "^5.0.0",
+    "retext-smartypants": "^3.0.1",
     "snyk": "^1.88.1",
     "unified": "^7.0.0",
     "unist-util-filter": "^1.0.0",
+    "unist-util-map": "^1.0.4",
     "unist-util-select": "^1.5.0",
     "uri-js": "^4.2.2",
     "winston": "^3.0.0"
