--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "istanbul": "^1.0.0-alpha.2",
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.17.0",
-    "nyc": "^13.0.1"
+    "nyc": "^13.0.1",
+    "unist-util-inspect": "^4.1.3"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
