--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "retext-smartypants": "^3.0.1",
     "snyk": "^1.88.1",
     "unified": "^7.0.0",
-    "unist-util-filter": "^1.0.0",
+    "unist-util-find-all-between": "^1.0.2",
     "unist-util-map": "^1.0.4",
     "unist-util-select": "^1.5.0",
     "uri-js": "^4.2.2",
