--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "fs-extra": "^7.0.0",
+    "hast-to-hyperscript": "^5.0.0",
     "hast-util-to-html": "^4.0.1",
+    "hyperscript": "^2.0.2",
     "js-yaml": "^3.12.0",
     "lodash": "^4.17.10",
     "mdast-util-to-hast": "^3.0.1",
