--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hast-util-to-html": "^4.0.1",
     "hyperscript": "^2.0.2",
     "js-yaml": "^3.12.0",
+    "jsdom": "^12.0.0",
     "lodash": "^4.17.10",
     "mdast-util-to-hast": "^3.0.1",
     "mdast-util-to-string": "^1.0.4",
