--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash": "^4.17.10",
     "mdast-util-to-hast": "^3.0.1",
     "mdast-util-to-string": "^1.0.4",
+    "mdurl": "^1.0.1",
     "rehype-parse": "^5.0.0",
     "remark-frontmatter": "^1.3.0",
     "remark-parse": "^5.0.0",
