generate typescript files from JSON Schema

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "repository": "https://github.com/adobe/hypermedia-pipeline",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "nyc mocha",
-    "lint": "npx eslint .",
+    "lint": "npx eslint . && npm run types",
+    "types": "json2ts src/action.schema.json src/action.d.ts && json2ts src/context.schema.json src/context.d.ts",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect",
     "preversion": "npm test",
@@ -39,6 +41,7 @@
     "hyperscript": "^2.0.2",
     "js-yaml": "^3.12.0",
     "jsdom": "^12.0.0",
+    "json-schema-to-typescript": "^6.0.1",
     "lodash": "^4.17.10",
     "mdast-util-to-hast": "^3.0.1",
     "mdast-util-to-string": "^1.0.4",
