--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "codecov": "^3.0.2",
-    "eslint": "^5.6.0",
+    "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-header": "^2.0.0",
     "eslint-plugin-import": "^2.14.0",
@@ -32,6 +32,7 @@
     "unist-util-inspect": "^4.1.3"
   },
   "dependencies": {
+    "@adobe/openwhisk-loggly-wrapper": "^0.3.0",
     "bluebird": "^3.5.1",
     "fs-extra": "^7.0.0",
     "hast-to-hyperscript": "^5.0.0",
