--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "unist-util-inspect": "^4.1.3"
   },
   "dependencies": {
+    "ajv": "^6.5.4",
     "bluebird": "^3.5.1",
     "fs-extra": "^7.0.0",
     "hast-to-hyperscript": "^5.0.0",
