--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "nyc mocha",
     "lint": "npx eslint . && npm run types",
     "types": "node bin/schema2ts.js",
+    "docs": "npx jsonschema2md -d src -o docs",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect",
     "preversion": "npm test",
@@ -18,6 +19,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@adobe/jsonschema2md": "^1.1.1-SNAPSHOT.236",
     "codecov": "^3.0.2",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
