--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@adobe/openwhisk-loggly-wrapper": "^0.3.0",
     "bluebird": "^3.5.1",
+    "callsites": "^2.0.0",
     "fs-extra": "^7.0.0",
     "hast-to-hyperscript": "^5.0.0",
     "hast-util-to-html": "^4.0.1",
