--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "repository": "https://github.com/adobe/hypermedia-pipeline",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "nyc mocha",
-    "lint": "npx eslint .",
+    "lint": "npx eslint . && npm run types",
+    "types": "npm run docs && node bin/schema2ts.js",
+    "docs": "npx jsonschema2md -d src -o docs",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect",
     "preversion": "npm test",
@@ -16,6 +19,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@adobe/jsonschema2md": "^1.1.1-SNAPSHOT.236",
     "codecov": "^3.0.2",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
@@ -30,6 +34,7 @@
     "unist-util-inspect": "^4.1.3"
   },
   "dependencies": {
+    "ajv": "^6.5.4",
     "@adobe/openwhisk-loggly-wrapper": "^0.3.0",
     "bluebird": "^3.5.1",
     "callsites": "^2.0.0",
@@ -39,6 +44,7 @@
     "hyperscript": "^2.0.2",
     "js-yaml": "^3.12.0",
     "jsdom": "^12.0.0",
+    "json-schema-to-typescript": "^6.0.1",
     "lodash": "^4.17.10",
     "mdast-util-to-hast": "^3.0.1",
     "mdast-util-to-string": "^1.0.4",
