--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "unist-util-inspect": "^4.1.3"
   },
   "dependencies": {
-    "ajv": "^6.5.4",
     "@adobe/openwhisk-loggly-wrapper": "^0.3.0",
+    "ajv": "^6.5.4",
     "bluebird": "^3.5.1",
     "callsites": "^2.0.0",
     "fs-extra": "^7.0.0",
@@ -49,6 +49,7 @@
     "mdast-util-to-hast": "^3.0.1",
     "mdast-util-to-string": "^1.0.4",
     "mdurl": "^1.0.1",
+    "micromatch": "^3.1.10",
     "rehype-parse": "^5.0.0",
     "remark-frontmatter": "^1.3.0",
     "remark-parse": "^5.0.0",
