--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
     "unist-util-inspect": "^4.1.3"
   },
   "dependencies": {
-    "ajv": "^6.5.4",
     "@adobe/openwhisk-loggly-wrapper": "^0.3.0",
-    "bluebird": "^3.5.1",
+    "ajv": "^6.5.4",
     "callsites": "^2.0.0",
     "fs-extra": "^7.0.0",
     "hast-to-hyperscript": "^5.0.0",
@@ -54,11 +53,11 @@
     "remark-parse": "^6.0.0",
     "remark-rehype": "^3.0.0",
     "request": "^2.87.0",
-    "request-promise": "^4.2.2",
+    "request-promise-native": "^1.0.5",
     "retext": "^5.0.0",
     "retext-smartypants": "^3.0.1",
     "snyk": "^1.88.1",
-    "tmp-promise": "^1.0.5",
+    "tmp": "0.0.33",
     "unified": "^7.0.0",
     "unist-util-find-all-between": "^1.0.2",
     "unist-util-map": "^1.0.4",
