disable docs generation jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,4 +174,5 @@ workflows:
         - build
         filters:
           branches:
-            only: master
+            # disable for now, as the build fails
+            only: disabled_master
