--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.17.0",
     "nyc": "^13.0.1",
-    "unist-util-inspect": "^4.1.3"
+    "unist-util-inspect": "^4.1.3",
+    "unist-util-remove-position": "^1.1.2"
   },
   "dependencies": {
     "@adobe/openwhisk-loggly-wrapper": "^0.3.0",
