--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,7 @@ jobs:
       # send up-to-date markdown back to GitHub
       - run:
           name: Publish Markdown to GitHub
-          command: git add --force docs/* && git commit -m "[ci skip] updating documentation" && git push
+          command: git pull && git add --force docs/* && git commit -m "[ci skip] updating documentation" && git push
 
 workflows:
   version: 2
