--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mdast-util-to-string": "^1.0.4",
     "mdurl": "^1.0.1",
     "micromatch": "^3.1.10",
+    "object-hash": "^1.3.1",
     "rehype-parse": "^6.0.0",
     "remark-frontmatter": "^1.3.0",
     "remark-parse": "^6.0.0",
