--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@adobe/openwhisk-loggly-wrapper": "^0.3.0",
     "ajv": "^6.5.4",
     "callsites": "^3.0.0",
+    "clone": "^2.1.2",
     "fs-extra": "^7.0.0",
     "hast-to-hyperscript": "^6.0.0",
     "hast-util-to-html": "^5.0.0",
