--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "nyc mocha",
+    "test": "nyc mocha --exit",
     "lint": "npx eslint . && npm run types",
     "types": "npm run docs && node bin/schema2ts.js",
     "docs": "npx jsonschema2md -d src/schemas -o docs",
@@ -20,6 +20,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@adobe/jsonschema2md": "^1.1.1-SNAPSHOT.236",
+    "@pollyjs/adapter-node-http": "^1.4.1",
+    "@pollyjs/core": "^1.4.1",
+    "@pollyjs/persister-fs": "^1.4.1",
     "codecov": "^3.0.2",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
@@ -28,13 +31,13 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "istanbul": "^1.0.0-alpha.2",
+    "json-schema-to-typescript": "^6.0.1",
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.17.0",
     "nyc": "^13.0.1",
+    "snyk": "^1.113.0",
     "unist-util-inspect": "^4.1.3",
-    "unist-util-remove-position": "^1.1.2",
-    "json-schema-to-typescript": "^6.0.1",
-    "snyk": "^1.113.0"
+    "unist-util-remove-position": "^1.1.2"
   },
   "dependencies": {
     "@adobe/openwhisk-loggly-wrapper": "^0.3.0",
