--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
         command: git config --global user.email "you@example.com" && git config --global user.name "CircleCi Build"
     - run:
         name: Running Tests
-        command: npx mocha --reporter mocha-junit-reporter
+        command: npx mocha --reporter mocha-junit-reporter --exit
         environment:
           MOCHA_FILE: junit/test-results.xml
         when: always
@@ -56,7 +56,7 @@ jobs:
     # get code coverage
     - run:
         name: Getting Code Coverage
-        command: npx istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec && npx codecov
+        command: npx istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec --exit && npx codecov
         environment:
           MOCHA_FILE: junit/test-results.xml
         when: always
