--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adobe/helix-pipeline",
-  "version": "0.10.2-pre.2",
+  "version": "0.10.2",
   "description": "",
   "repository": "https://github.com/adobe/helix-pipeline",
   "main": "index.js",
