--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
+    "semantic-release": "semantic-release",
+    "commit": "npm run lint && npm run docs && git-cz",
     "test": "nyc nyc --reporter=lcov mocha --exit",
     "lint": "npx eslint . && npm run types",
     "types": "npm run docs && node bin/schema2ts.js",
@@ -23,18 +25,26 @@
     "@pollyjs/adapter-node-http": "^2.2.0",
     "@pollyjs/core": "^2.2.0",
     "@pollyjs/persister-fs": "^2.1.0",
+    "@semantic-release/changelog": "^3.0.2",
+    "@semantic-release/git": "^7.0.8",
+    "@semantic-release/github": "^5.2.10",
     "codecov": "^3.0.2",
+    "commitizen": "^3.0.7",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-header": "^3.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
+    "ghooks": "^2.0.4",
     "istanbul": "^1.0.0-alpha.2",
     "json-schema-to-typescript": "^6.0.1",
+    "lint-staged": "^8.1.4",
     "mocha": "^6.0.0",
     "mocha-junit-reporter": "^1.17.0",
     "nyc": "^13.3.0",
+    "semantic-release": "^15.13.3",
     "snyk": "^1.124.1",
     "unist-util-inspect": "^4.1.3",
     "unist-util-remove-position": "^1.1.2"
@@ -74,5 +84,16 @@
     "xml2js": "^0.4.19",
     "xmlbuilder": "^11.0.0"
   },
-  "snyk": true
+  "snyk": true,
+  "lint-staged": {
+    "*.js": "eslint"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    },
+    "ghooks": {
+      "pre-commit": "npx lint-staged"
+    }
+  }
 }
