--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,17 +110,8 @@ jobs:
         command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
 
     - run:
-        name: version pre-release
-        command: npm version prerelease --preid=pre -m "Release %s [ci skip]"
-
-    # unfortunately we cannot create a release commit with no tag with `npm version`, so we need to delete it here again
-    - run:
-        name: delete pre-release tag
-        command: npm run delete-git-tag
-
-    - run:
-        name: publish pre-release
-        command: npm publish --tag next --access public
+        name: Semantic Release
+        command: npm run semantic-release
 
   generate-docs:
     docker:
