--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nyc": "^13.3.0",
     "semantic-release": "^15.13.3",
     "snyk": "^1.124.1",
+    "unist-builder": "^1.0.3",
     "unist-util-inspect": "^4.1.3",
     "unist-util-remove-position": "^1.1.2"
   },
