--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adobe/helix-pipeline",
-  "version": "0.11.1-pre.9",
+  "version": "1.0.5",
   "description": "",
   "repository": "https://github.com/adobe/helix-pipeline",
   "main": "index.js",
