--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "uri-js": "^4.2.2",
     "winston": "^3.0.0",
     "xml2js": "^0.4.19",
-    "xmlbuilder": "^11.0.0"
+    "xmlbuilder": "^11.0.0",
+    "xregexp": "^4.2.4"
   },
   "snyk": true,
   "lint-staged": {
