--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "picomatch": "*",
     "@adobe/jsonschema2md": "^2.0.0",
     "@pollyjs/adapter-node-http": "^2.2.0",
     "@pollyjs/core": "^2.3.0",
