--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ajv": "^6.6.2",
     "callsites": "^3.0.0",
     "clone": "^2.1.2",
+    "dompurify": "^1.0.10",
     "fs-extra": "^8.0.0",
     "github-slugger": "^1.2.1",
     "hast-util-select": "^3.0.1",
