--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "micromatch": "^4.0.0",
     "object-hash": "^1.3.1",
     "rehype-parse": "^6.0.0",
+    "rehype-stringify": "^5.0.0",
     "remark-parse": "^6.0.0",
     "remark-rehype": "^4.0.0",
     "request": "^2.87.0",
@@ -77,6 +78,7 @@
     "unist-util-map": "^1.0.4",
     "unist-util-select": "^2.0.0",
     "uri-js": "^4.2.2",
+    "url-parse": "^1.4.6",
     "winston": "^3.0.0",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^12.0.0"
