--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,137 +1,77 @@
 version: 2.1
 
+executors:
+  node8:
+    docker:
+      - image: circleci/node:8
+    environment:
+      NPM_CONFIG_PREFIX: ~/.npm-global
+
+commands:
+  setup:
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v2-dependencies-{{ arch }}-{{ checksum "package-lock.json" }}
+      - run:
+          name: install npm 6.9.0
+          command: sudo npm -g install npm@6.9.0
+      - run:
+          name: Installing Dependencies
+          command: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v2-dependencies-{{ arch }}-{{ checksum "package-lock.json" }}
+      - run:
+          name: prepare test git user
+          command: git config --global user.email "circleci@example.com" && git config --global user.name "CircleCi Build"
+
 orbs:
     helix-smoke-tests: adobe/helix-smoke-tests@0.0.7
 
 jobs:
   build:
-    docker:
-    - image: circleci/node:8
-      environment:
-        NPM_CONFIG_PREFIX: "~/.npm-global"
-
-    working_directory: ~/repo
-
+    executor: node8
     steps:
-    - checkout
+      - setup
+      - run: mkdir junit
+      - run:
+          name: Test and Code Coverage
+          command: npm run test-ci
+          environment:
+            MOCHA_FILE: junit/test-results.xml
 
-    # Download and cache dependencies
-    - restore_cache:
-        keys:
-        - v2-dependencies-{{ checksum "package-lock.json" }}
-    - run:
-        name: Set up global NPM
-        command: mkdir ~/.npm-global
+      - store_test_results:
+          path: junit
 
-    - run:
-        name: install npm 6.4.0
-        command: sudo npm -g install npm@6.4.0
+      - store_artifacts:
+          path: junit
 
-    - run:
-        name: Install Dependencies
-        command: npm install
+      - run:
+          name: Generating Docs
+          command: npm run docs
 
-    - save_cache:
-        paths:
-        - node_modules
-        key: v2-dependencies-{{ checksum "package-lock.json" }}
-
-    - run:
-        name: Lint
-        command: npm run lint
-
-    # run tests!
-    - run: mkdir junit
-    - run:
-        name: prepare test git user
-        command: git config --global user.email "you@example.com" && git config --global user.name "CircleCi Build"
-    - run:
-        name: Running Tests
-        command: npx mocha --reporter mocha-junit-reporter --exit
-        environment:
-          MOCHA_FILE: junit/test-results.xml
-        when: always
-
-
-    # get code coverage
-    - run:
-        name: Getting Code Coverage
-        command: npx istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec --exit && npx codecov
-        environment:
-          MOCHA_FILE: junit/test-results.xml
-        when: always
-
-    - run:
-        name: Generating Docs
-        command: npm run docs
-
-    - store_test_results:
-        path: junit
-
-    - store_artifacts:
-        path: junit
-
-  publish-pre-release:
-    docker:
-    # specify the version you desire here
-    - image: circleci/node:8
-
-    working_directory: ~/repo
-
+  release:
+    executor: node8
     steps:
-    - checkout
+      - setup
+      - run:
+          name: revert changes to package-lock.json
+          command: git checkout -- package-lock.json
 
-    - restore_cache:
-        keys:
-        - v2-dependencies-{{ checksum "package-lock.json" }}
-
-    - run:
-        name: prepare test git user
-        command: git config --global user.email "circleci@example.com" && git config --global user.name "CircleCi Build"
-
-    - run:
-        name: install npm 6.4.0
-        command: sudo npm -g install npm@6.4.0
-
-    - run:
-        name: install
-        command: npm install
-
-    - run:
-        name: revert changes to package-lock.json
-        command: git checkout -- package-lock.json
-
-    - run:
-        name: configure npm registry
-        command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-
-    - run:
-        name: Semantic Release
-        command: npm run semantic-release
+      - run:
+          name: Semantic Release
+          command: npm run semantic-release
 
   generate-docs:
-    docker:
-      - image: circleci/node:8
-
-    working_directory: ~/repo
-
+    executor: node8
     steps:
-      - checkout
-
-      - restore_cache:
-          keys:
-            - v2-dependencies-{{ checksum "package-lock.json" }}
-
+      - setup
       - add_ssh_keys:
           fingerprints:
             - "e2:da:a5:eb:5a:3c:69:a8:d7:1a:db:19:26:86:69:2b"
-
-      - run: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v2-dependencies-{{ checksum "package-lock.json" }}
 
       # generate markdowm
       - run: npm run docs
@@ -150,8 +90,8 @@ workflows:
     # run build on any branch
     - build
 
-    # publish pre-releases on master
-    - publish-pre-release:
+    # publish releases on master
+    - release:
         requires:
         - build
         filters:
@@ -162,7 +102,7 @@ workflows:
     - generate-docs:
         requires:
         - build
-        - publish-pre-release
+        - release
         filters:
           branches:
             only: master
