--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@adobe/jsonschema2md": "^2.0.0",
-    "@pollyjs/adapter-node-http": "^2.2.0",
-    "@pollyjs/core": "^2.3.0",
+    "@pollyjs/adapter-fetch": "^2.4.0",
+    "@pollyjs/adapter-node-http": "^2.4.0",
+    "@pollyjs/core": "^2.4.0",
     "@pollyjs/persister-fs": "^2.1.0",
     "@semantic-release/changelog": "^3.0.2",
     "@semantic-release/git": "^7.0.8",
