feat(pipe): use jsdom everywhere

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "ghooks": "^2.0.4",
+    "hastscript": "^5.1.0",
+    "hyperscript": "^2.0.2",
     "istanbul": "^1.0.0-alpha.2",
     "json-schema-to-typescript": "^6.0.1",
     "lint-staged": "^8.1.4",
@@ -57,10 +59,6 @@
     "dompurify": "^1.0.10",
     "fs-extra": "^8.0.0",
     "github-slugger": "^1.2.1",
-    "hast-util-select": "^3.0.1",
-    "hast-to-hyperscript": "^7.0.1",
-    "hast-util-to-html": "^5.0.1",
-    "hyperscript": "^2.0.2",
     "js-yaml": "^3.13.1",
     "jsdom": "^15.0.0",
     "lodash": "^4.17.11",
@@ -69,9 +67,8 @@
     "mdurl": "^1.0.1",
     "micromatch": "^4.0.0",
     "object-hash": "^1.3.1",
-    "rehype-parse": "^6.0.0",
+    "property-information": "^5.1.0",
     "remark-parse": "^6.0.0",
-    "remark-rehype": "^4.0.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
     "retext": "^6.0.0",
@@ -83,6 +80,7 @@
     "unist-util-select": "^2.0.0",
     "uri-js": "^4.2.2",
     "url-parse": "^1.4.6",
+    "web-namespaces": "^1.1.3",
     "winston": "^3.0.0",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^13.0.0"
