--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mdurl": "^1.0.1",
     "micromatch": "^4.0.0",
     "object-hash": "^1.3.1",
+    "openwhisk": "^3.19.0",
     "property-information": "^5.1.0",
     "remark-parse": "^6.0.0",
     "request": "^2.87.0",
