--- a/package.json
+++ b/package.json
@@ -19,74 +19,74 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@adobe/jsonschema2md": "^2.0.0",
-    "@pollyjs/adapter-fetch": "^2.4.0",
-    "@pollyjs/adapter-node-http": "^2.4.0",
-    "@pollyjs/core": "^2.4.0",
+    "@adobe/jsonschema2md": "^2.1.1",
+    "@pollyjs/adapter-fetch": "^2.5.0",
+    "@pollyjs/adapter-node-http": "^2.5.0",
+    "@pollyjs/core": "^2.5.0",
     "@pollyjs/persister-fs": "^2.1.0",
-    "@semantic-release/changelog": "^3.0.2",
-    "@semantic-release/git": "^7.0.10",
-    "@semantic-release/github": "^5.2.10",
-    "codecov": "^3.0.2",
+    "@semantic-release/changelog": "^3.0.4",
+    "@semantic-release/git": "^7.0.16",
+    "@semantic-release/github": "^5.4.2",
+    "codecov": "^3.5.0",
     "commitizen": "^3.1.1",
     "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-header": "^3.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
     "ghooks": "^2.0.4",
     "hastscript": "^5.1.0",
     "hyperscript": "^2.0.2",
     "istanbul": "^1.0.0-alpha.2",
-    "json-schema-to-typescript": "^6.0.1",
-    "lint-staged": "^9.0.0",
+    "json-schema-to-typescript": "^6.1.3",
+    "lint-staged": "^9.1.0",
     "mocha": "^6.1.4",
-    "mocha-junit-reporter": "^1.17.0",
-    "nyc": "^14.1.0",
-    "semantic-release": "^15.13.19",
-    "unist-builder": "^1.0.3",
-    "unist-util-inspect": "^4.1.3",
-    "unist-util-remove-position": "^1.1.2"
+    "mocha-junit-reporter": "^1.23.0",
+    "nyc": "^14.1.1",
+    "semantic-release": "^15.13.18",
+    "unist-builder": "^1.0.4",
+    "unist-util-inspect": "^4.1.4",
+    "unist-util-remove-position": "^1.1.3"
   },
   "dependencies": {
-    "@adobe/helix-shared": "^1.5.0",
+    "@adobe/helix-shared": "^1.5.1",
     "@adobe/openwhisk-loggly-wrapper": "0.4.3",
-    "ajv": "^6.6.2",
-    "callsites": "^3.0.0",
+    "ajv": "^6.10.1",
+    "callsites": "^3.1.0",
     "clone": "^2.1.2",
-    "dompurify": "^1.0.10",
-    "ferrum": "^0.1.0",
-    "fs-extra": "^8.0.0",
+    "dompurify": "^1.0.11",
+    "ferrum": "^1.2.0",
+    "fs-extra": "^8.1.0",
     "github-slugger": "^1.2.1",
     "js-yaml": "^3.13.1",
-    "jsdom": "^15.0.0",
-    "lodash": "^4.17.11",
-    "mdast-util-to-hast": "^6.0.0",
-    "mdast-util-to-string": "^1.0.4",
+    "jsdom": "^15.1.1",
+    "lodash": "^4.17.13",
+    "mdast-util-to-hast": "^6.0.1",
+    "mdast-util-to-string": "^1.0.6",
     "mdurl": "^1.0.1",
-    "micromatch": "^4.0.0",
+    "micromatch": "^4.0.2",
     "object-hash": "^1.3.1",
     "openwhisk": "^3.19.0",
     "property-information": "^5.1.0",
-    "remark-parse": "^6.0.0",
+    "remark-parse": "^6.0.3",
     "request": "^2.87.0",
-    "request-promise-native": "^1.0.5",
+    "request-promise-native": "^1.0.7",
     "retext": "^7.0.0",
-    "retext-smartypants": "^3.0.1",
-    "strip-markdown": "^3.0.3",
-    "unified": "^8.0.0",
-    "unist-util-find-all-between": "^1.0.2",
-    "unist-util-map": "^1.0.4",
-    "unist-util-select": "^2.0.0",
+    "retext-smartypants": "^3.0.3",
+    "snyk": "^1.192.4",
+    "strip-markdown": "^3.0.4",
+    "unified": "^8.0.1",
+    "unist-util-find-all-between": "^1.0.4",
+    "unist-util-map": "^1.0.5",
+    "unist-util-select": "^2.0.2",
     "uri-js": "^4.2.2",
     "url-parse": "^1.4.6",
     "web-namespaces": "^1.1.3",
-    "winston": "^3.0.0",
+    "winston": "^3.2.1",
     "xml2js": "^0.4.19",
-    "xmlbuilder": "^13.0.0",
-    "snyk": "^1.192.3"
+    "xmlbuilder": "^13.0.2"
   },
   "snyk": true,
   "lint-staged": {
