--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mocha-junit-reporter": "^1.23.1",
     "nyc": "^14.1.1",
     "semantic-release": "^15.13.19",
+    "sinon": "^7.5.0",
     "unist-builder": "^1.0.4",
     "unist-util-inspect": "^4.1.4",
     "unist-util-remove-position": "^1.1.3"
