--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "ghooks": "2.0.4",
     "hastscript": "5.1.1",
     "hyperscript": "2.0.2",
-    "istanbul": "1.0.0-alpha.2",
     "json-schema-to-typescript": "7.1.0",
     "lint-staged": "9.4.2",
     "mocha": "6.2.2",
     "mocha-junit-reporter": "1.23.1",
+    "nock": "^11.7.0",
     "nyc": "14.1.1",
     "semantic-release": "15.13.30",
     "sinon": "7.5.0",
@@ -48,8 +48,9 @@
     "unist-util-remove-position": "2.0.0"
   },
   "dependencies": {
+    "@adobe/helix-log": "4.0.0",
     "@adobe/helix-shared": "^3.0.0",
-    "@adobe/openwhisk-loggly-wrapper": "0.4.3",
+    "@adobe/openwhisk-action-utils": "2.7.2",
     "ajv": "^6.10.2",
     "callsites": "^3.1.0",
     "clone": "^2.1.2",
@@ -62,10 +63,8 @@
     "lodash": "^4.17.15",
     "mdast-util-to-hast": "^7.0.0",
     "mdast-util-to-string": "^1.0.6",
-    "mdurl": "^1.0.1",
     "micromatch": "^4.0.2",
     "object-hash": "^2.0.0",
-    "openwhisk": "^3.19.0",
     "property-information": "^5.2.2",
     "remark-parse": "^7.0.1",
     "request": "^2.87.0",
@@ -80,7 +79,6 @@
     "uri-js": "^4.2.2",
     "url-parse": "^1.4.6",
     "web-namespaces": "^1.1.3",
-    "winston": "^3.2.1",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^13.0.2"
   },
