--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.1.0",
     "@adobe/jsonschema2md": "4.0.6",
+    "@adobe/helix-testutils": "0.3.0",
     "@pollyjs/adapter-fetch": "3.0.1",
     "@pollyjs/adapter-node-http": "3.0.2",
     "@pollyjs/core": "3.0.0",
