--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
     "ajv": "^6.10.2",
     "callsites": "^3.1.0",
     "clone": "^2.1.2",
-    "dompurify": "^2.0.3",
+    "dompurify": "2.0.7",
     "ferrum": "^1.2.0",
     "fs-extra": "^8.1.0",
     "github-slugger": "^1.2.1",
     "js-yaml": "^3.13.1",
-    "jsdom": "^16.0.0",
+    "jsdom": "15.2.1",
     "lodash": "^4.17.15",
     "mdast-util-to-hast": "^7.0.0",
     "mdast-util-to-string": "^1.0.6",
