--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "fs-extra": "^8.1.0",
     "github-slugger": "^1.2.1",
     "js-yaml": "^3.13.1",
-    "jsdom": "^15.1.1",
+    "jsdom": "16.0.1",
     "lodash": "^4.17.15",
     "mdast-util-to-hast": "^7.0.0",
     "mdast-util-to-string": "^1.0.6",
