--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   node10:
     docker:
-      - image: circleci/node:10-stretch
+      - image: circleci/node:10.18.1-buster
     environment:
       NPM_CONFIG_PREFIX: ~/.npm-global
 
