refactor(html pipe): use helix-fetch to fetch the markdown files
Use the newly released helix-fetch module to fetch the markdown files instead of the old request
promise

--- a/package.json
+++ b/package.json
@@ -19,48 +19,49 @@
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.1.0",
     "@adobe/helix-testutils": "0.3.0",
-    "@adobe/jsonschema2md": "4.0.12",
-    "@pollyjs/adapter-fetch": "4.0.0",
-    "@pollyjs/adapter-node-http": "4.0.0",
-    "@pollyjs/core": "4.0.0",
-    "@pollyjs/persister-fs": "4.0.0",
+    "@adobe/jsonschema2md": "4.0.13",
+    "@pollyjs/adapter-fetch": "4.0.2",
+    "@pollyjs/adapter-node-http": "4.0.3",
+    "@pollyjs/core": "4.0.2",
+    "@pollyjs/persister-fs": "4.0.2",
     "@semantic-release/changelog": "5.0.0",
     "@semantic-release/git": "9.0.0",
-    "@semantic-release/github": "6.0.2",
-    "codecov": "3.6.2",
+    "@semantic-release/github": "7.0.2",
+    "codecov": "3.6.4",
     "commitizen": "4.0.3",
-    "cz-conventional-changelog": "3.0.2",
+    "cz-conventional-changelog": "3.1.0",
     "eslint": "6.8.0",
     "eslint-plugin-header": "3.0.0",
-    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-import": "2.20.1",
     "ghooks": "2.0.4",
     "hastscript": "5.1.1",
     "hyperscript": "2.0.2",
     "json-schema-to-typescript": "8.0.1",
-    "lint-staged": "10.0.3",
+    "lint-staged": "10.0.7",
     "mocha": "7.0.1",
     "mocha-junit-reporter": "1.23.3",
     "nock": "11.7.2",
     "nyc": "15.0.0",
-    "semantic-release": "17.0.0",
+    "semantic-release": "17.0.2",
     "sinon": "8.1.1",
     "unist-builder": "2.0.2",
     "unist-util-inspect": "5.0.0",
     "unist-util-remove-position": "2.0.0"
   },
   "dependencies": {
+    "@adobe/helix-fetch": "1.1.0",
     "@adobe/helix-log": "4.5.0",
-    "@adobe/helix-shared": "^5.0.0",
-    "@adobe/openwhisk-action-logger": "2.0.4",
+    "@adobe/helix-shared": "^5.1.0",
+    "@adobe/openwhisk-action-logger": "2.1.0",
     "ajv": "^6.10.2",
     "callsites": "^3.1.0",
     "clone": "^2.1.2",
-    "dompurify": "2.0.7",
+    "dompurify": "2.0.8",
     "ferrum": "^1.2.0",
     "fs-extra": "^8.1.0",
     "github-slugger": "^1.2.1",
     "js-yaml": "^3.13.1",
-    "jsdom": "16.0.1",
+    "jsdom": "16.1.0",
     "lodash": "^4.17.15",
     "mdast-util-to-hast": "^7.0.0",
     "mdast-util-to-string": "^1.0.6",
