feat(html pipe): support declaratively configurable markup
rebase on master

fix #516

--- a/package.json
+++ b/package.json
@@ -59,9 +59,12 @@
     "clone": "^2.1.2",
     "dompurify": "2.0.8",
     "dot-prop": "^5.2.0",
+    "emmet": "^1.6.3",
     "ferrum": "^1.2.0",
     "fs-extra": "^8.1.0",
     "github-slugger": "^1.2.1",
+    "hast-util-find-and-replace": "^2.0.0",
+    "hast-util-from-dom": "^2.0.1",
     "js-yaml": "^3.13.1",
     "jsdom": "16.2.1",
     "lodash": "^4.17.15",
