--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "callsites": "^3.1.0",
     "clone": "^2.1.2",
     "dompurify": "2.0.8",
+    "dot-prop": "^5.2.0",
     "ferrum": "^1.2.0",
     "fs-extra": "^8.1.0",
     "github-slugger": "^1.2.1",
