chore: rename master to main

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ workflows:
         filters:
           branches:
             ignore:
-              - master
+              - main
               - /renovate.*/
 
   smoke:
