fix(md): ensure proper parsing of gfm autolinks

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,4 +1,7 @@
 {
   "extends": ["github>adobe/helix-shared"],
-  "ignoreDeps": ["micromark-extension-gfm-autolink-literal"]
+  "ignoreDeps": [
+    "micromark-extension-gfm-autolink-literal",
+    "mdast-util-gfm-autolink-literal"
+  ]
 }
